Fix arrow alignment

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1574,6 +1574,7 @@ body.light-bg {
 	.scroll-icon {
 		font-size: 18px;
 		display: none;
+		margin: 0 auto;
 	}
 	a {
 		color: inherit;
